--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.carousel-container {
+  width: 100%;
+  perspective: 1000px; /* Adjust perspective as needed */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.slick-slide {
+  transition: transform 0.5s ease;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.slick-center .slide {
+  transform: scale(1.2) translateZ(100px);
+  z-index: 1;
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.slick-slide {
+  transform: scale(0.8) translateZ(-100px);
+  z-index: 1;
+  height: 300px; /* Default image height */
+  width: 300px; /* Default image width */
+}
+
+.slide {
+  position: relative;
+  height: 100%; /* Ensures the div containing the image and text fills the slide height */
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover; /* Ensures images maintain aspect ratio while filling the container */
+}
+
+.slide p {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 16px;
 }
