--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'NeueHaasUnica';
+  src: url('./assets/fonts/NeueHaasUnicaPro-Black.ttf') format('truetype');
+  font-weight: 900; /* Use 900 for Black */
+  /* font-style: bold;  */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'NeueHaasUnica';
+  src: url('./assets/fonts/NeueHaasUnicaPro-Light.ttf') format('truetype');
+  font-weight: 300; /* Use 300 for Light */
+  /* font-style: normal; */
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'NeueHaasUnica', sans-serif;
+}
+
+html {
+  overflow-x: hidden;
+}
+
